@@ -7,6 +7,8 @@ def main(argv):
     if len(argv) > 2:
         f1 = open(argv[1], 'a+')
         f1.write('%s\n' % (argv))
+        if 'MD_VERSION' in os.environ:
+            f1.write('MD_VERSION=%s\n' % (os.environ['MD_VERSION']))
         if 'MD_STORE' in os.environ:
             f1.write('MD_STORE=%s\n' % (os.environ['MD_STORE']))
         if 'PATH' in os.environ:
